# PhoenixOSv1

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  config.example.toml  rustfmt.toml
client/: Cargo.toml  build.rs
client/src/: dl.rs  elf.rs  lib.rs  phos.rs
client/src/hijack/: client.rs  cuda_hijack_custom.rs  cuda_hijack_utils.rs  cudart_hijack_custom.rs  cudart_register.rs  cudnn_hijack_custom.rs  handle.rs  mod.rs
codegen/hookdef/src/: lib.rs
codegen/src/: client_macros.rs  hook_fn.rs  lib.rs  server_macros.rs  utils.rs
cudasys/: Cargo.toml  README.md  build.rs
cudasys/hookgen/src/: lib.rs
cudasys/include/: cublasLt_wrapper.h  cuda_wrapper.h  cudart_wrapper.hpp
cudasys/src/: lib.rs  types.rs
cudasys/src/hooks/: cublas.rs  cublasLt.rs  cuda.rs  cudart.rs  cudnn.rs  nccl.rs  nvml.rs
docs/: remoting.md
environment/: README.md
environment/cuda11/: Dockerfile
environment/cuda12/: Dockerfile  README.md
environment/vllm/: Dockerfile  compose.example.yaml
measure/src/: lib.rs
network/: Cargo.toml
network/examples/: shm_client.rs  shm_server.rs
network/src/: channel.rs  config.rs  lib.rs  oob.rs  restore.rs  session.rs  tcp.rs
network/src/ringbufferchannel/: emulator.rs  mod.rs  rdma.rs  shm.rs  test.rs  types.rs
network/src/type_impl/: mod.rs
network/tests/: channel_stress.rs  rdma_comm.rs  type_transfer.rs
phos/: Cargo.toml  README.md  build.rs
phos/src/: cpucr.rs  lib.rs  main.rs
phos/tests/: cpucr.rs  piggie.c
server/: Cargo.toml  README.md  build.rs
server/src/: control.rs  daemon.rs  handle.rs  lib.rs  main.rs  phos.rs  worker.rs
server/src/dispatcher/: cuda_exe_utils.rs  cudart_exe_utils.rs  mod.rs
server/src/phos/: cli.rs  daemon.rs  detach.rs  handle.rs  handle_demo.rs  kernel.rs  memory.rs  memory_demo.rs  mod.rs  nvml.rs  standby.rs
server/src/phos/memory/: ckpt.rs  cuda.rs  manager.rs
tests/apps/: README.md
tests/apps/infer/gpt2/: inference.py
tests/apps/resnet/: README.md
tests/apps/vllm/: README.md  cold-start.py  measure-restore.py  measure-standby.py  multi.py  single-ckpt.py  single.py  standby-attach.py  standby-prewarm.py  vanilla-sleep.py
tests/cuda_api/: CMakeLists.txt
