[package]
name = "cudasys"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
codegen = { workspace = true }
network = { workspace = true }

[build-dependencies]
bindgen = "0.72"
glob = "0.3"
regex = "1.0"
syn = { workspace = true }

[lints]
workspace = true
