[package]
name = "phos"
version.workspace = true
edition.workspace = true

[dependencies]
rust-criu = { git = "https://github.com/checkpoint-restore/rust-criu" }
log = { workspace = true }
env_logger = { workspace = true }
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"

[lints]
workspace = true
