[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
cudasys = { workspace = true }
network = { workspace = true }
codegen = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
core_affinity = { workspace = true }
libc = { workspace = true }
socket2 = "0.6" # will be removed in favor of tarpc

[build-dependencies]
cudasys = { workspace = true }
hookgen = { workspace = true }

[features]
default = ["phos"]
rdma = ["network/rdma"]
phos = []

[[bin]]
name = "server"
path = "src/main.rs"

[lints]
workspace = true
