[package]
name = "server"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
cudasys = { workspace = true }
network = { workspace = true }
codegen = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
core_affinity = { workspace = true }
libc = { workspace = true }
bincode = { workspace = true }
tarpc = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
clap = { version = "4.0", optional = true, default-features = false, features = ["std", "help", "usage", "derive"] }
xxh3 = "0.1"

[build-dependencies]
cudasys = { workspace = true }
hookgen = { workspace = true }

[features]
default = ["phos"]
phos = ["dep:clap"]

[lints]
workspace = true
